--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 aiogram==2.25.1
-aiohttp==3.8.6
-python-dotenv
-requests
+aiohttp<3.9.0,>=3.8.0
+python-dotenv==1.0.1
+requests==2.32.3
+SQLAlchemy==2.0.31
+psycopg2-binary==2.9.9
