--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 aiogram==2.25.1
-aiohttp<3.9.0,>=3.8.0
+httpx==0.27.2
+pydantic==1.10.13
 python-dotenv==1.0.1
-requests==2.32.3
-SQLAlchemy==2.0.31
-psycopg2-binary==2.9.9
+uvloop==0.19.0 ; sys_platform != "win32"
