--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiogram==2.25.1
-httpx==0.27.2
+httpx[http2]==0.27.2
 pydantic==1.10.13
 python-dotenv==1.0.1
 uvloop==0.19.0 ; sys_platform != "win32"
