--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,8 @@ TON_WALLET_ADDRESS=UQA98vnlaRu8CqlcAwxKRaa3kb2zJMMXF8euPneFhfZdPD2s
 # IPFS / Pinata
 PINATA_JWT=put_your_pinata_jwt
 PINATA_GATEWAY=https://gateway.pinata.cloud/ipfs/
+
+# Scanner
+LISTINGS_FEED_URL=https://example.com/ton_listings.json
+SCAN_INTERVAL_SEC=60
+SCAN_LOOKBACK_MIN=180
